# ML

./: .env  README.md  docker-compose.yml  pyproject.toml
data_collect/: angry.npy  data_collection.ipynb  data_training.py  disgusted.npy  happy.npy  inference.ipynb  nervous.npy  neutral.npy  requirements.txt  sad.npy  surprised.npy
data_collect/.ipynb_checkpoints/: data_collection-checkpoint.ipynb
face_recognition/: Feature_Engineering.ipynb  labelled_data.csv  labels.npy  music.py
src/: Dockerfile  pyproject.toml  requirements.txt
src/app/: api.py
src/app/constants/: config.py
src/app/crud/: audio_crud.py  car_crud.py  inquiry_crud.py  performance_crud.py  playlist_audio_crud.py  playlist_crud.py  user_crud.py
src/app/db/: database.py  seed_data.py
src/app/face_recognition/: music.py  music1.py  requirements.txt
src/app/models/: audio_model.py  car_model.py  inquiry_model.py  performance_model.py  playlist_audio_model.py  playlist_model.py  user_model.py
src/app/routers/: audio_router.py  auth_router.py  brand_router.py  car_router.py  inquiry_router.py  performance_router.py  playlist_audio_router.py  playlist_router.py  user_router.py
src/app/schemas/: auth_schema.py  brand_schema.py  car_schema.py  inquiry_schema.py  performance_schema.py  playlist_audio_schema.py  response_schema.py  s3_schema.py  user_schema.py
src/app/services/: validate_input.py
src/app/utils/: add_high_pitch.py  exception.py  handle_file.py  logger.py  response.py
