[tool.poetry]
name = "app"
version = "0.0.0"
description = "VocalWave service"
authors = ["Tam Kieu <tam.kieu@deltacognition.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.92.0"
sqlalchemy = "1.4.41"
python-dotenv = "1.0.0"
uvicorn = "0.21.1"
psycopg2-binary = "2.9.6"
gunicorn = "20.1.0"
pydantic = {extras = ["email"], version = "1.10.8"}
passlib = "1.7.4"
pydub = "^0.25.1"
numpy = "^1.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
